--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ use cases/.DS_Store
 .recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/segments_1
 *.lock
 *.properties
+.recommenders/index/http___download_eclipse_org_recommenders_models_oxygen_/segments_2
+*.class
